--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
